--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Web Responsive</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <header>
@@ -19,12 +19,12 @@
                 <span>branding, design, mobile, product</span>
             </div>
             <div class="image">
-                <img src="sleepiest.png" alt="Sleepiest app screenshot">
+                <img src="IMG/section-1-m.png" alt="Sleepiest app screenshot">
             </div>
         </section>
         <section class="project">
             <div class="image">
-                <img src="ulesson.png" alt="uLesson app screenshot">
+                <img src="IMG/section-2-m.png" alt="uLesson app screenshot">
             </div>
             <div class="text">
                 <h3>uLesson</h3>
@@ -39,7 +39,7 @@
                 <span>branding, design, experience, product</span>
             </div>
             <div class="image">
-                <img src="genesis.png" alt="Genesis Vision app screenshot">
+                <img src="IMG/section-3-m.png" alt="Genesis Vision app screenshot">
             </div>
         </section>
     </main>
@@ -47,9 +47,33 @@
         <h3>Have an idea? Tell us about it</h3>
         <div class="footer-links">
             <div>Product</div>
-            <div>Pricing</div>
-            <div>Features</div>
-            <div>Contact</div>
+            <ul>
+                <li>Feature</li>
+                <li>Security</li>
+                <li>Enterpirse</li>
+                <li>Customer stories</li>
+            </ul>
+            <div>Plataform</div>
+            <ul>
+                <li>Developer API</li>
+                <li>Partners</li>
+                <li>Atom</li>
+                <li>Electron</li>
+            </ul>
+            <div>Support</div>
+            <ul>
+                <li>Help</li>
+                <li>Community Forum</li>
+                <li>Learning Lab</li>
+                <li>Customer stories</li>
+            </ul>
+            <div>Company</div>
+            <ul>
+                <li>About</li>
+                <li>Blog</li>
+                <li>Careers</li>
+                <li>Press</li>
+            </ul>
         </div>
     </footer>
 </body>
