--- a/index.html
+++ b/index.html
@@ -1,96 +1,118 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="IMG/logomovil.png" type="image/png">
-    <title>Página Web Responsive</title>
-    <link rel="stylesheet" href="css.css">
+    <meta charset="UTF-8"> <!-- Define la codificación de caracteres para admitir caracteres especiales -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que la página sea responsive -->
+    <link rel="icon" href="IMG/logomovil.png" type="image/png"> <!-- Define un icono para la pestaña del navegador -->
+    <title>Página Web Responsive</title> <!-- Título de la página que aparece en la pestaña del navegador -->
+    <link rel="stylesheet" href="css.css"> <!-- Enlace a la hoja de estilos CSS externa -->
 </head>
 <body>
+
+    <!-- Encabezado de la página -->
     <header>
-        <h2>Mobile development</h2>
-        <h1>Grow your business with mobile apps</h1>
+        <h2>Mobile development</h2> <!-- Subtítulo -->
+        <h1>Grow your business with mobile apps</h1> <!-- Título principal -->
     </header>
 
     <main>
+        <!-- Sección de proyectos -->
         <section class="projects">
+
+            <!-- Primer proyecto -->
             <div class="project">
                 <div class="text">
-                    <h2>Sleepiest</h2>
-                    <h1>Helps millions fall asleep every night</h1>
-                    <p>branding, design, mobile, product</p>
+                    <h2>Sleepiest</h2> <!-- Nombre del proyecto -->
+                    <h1>Helps millions fall asleep every night</h1> <!-- Descripción corta del proyecto -->
+                    <p>branding, design, mobile, product</p> <!-- Categorías del proyecto -->
                 </div>
                 <div class="image">
-                    <img src="IMG/section-1-m.png" alt="Sleepiest">
+                    <img src="IMG/section-1-m.png" alt="Sleepiest"> <!-- Imagen del proyecto -->
                 </div>
             </div>
 
+            <!-- Segundo proyecto con la clase "reverse" para alternar el orden de imagen y texto -->
             <div class="project reverse">
                 <div class="image">
-                    <img src="IMG/section-2-m.png" alt="uLesson">
+                    <img src="IMG/section-2-m.png" alt="uLesson"> <!-- Imagen del proyecto -->
                 </div>
                 <div class="text">
-                    <h2>uLesson</h2>
-                    <h1>Online platform for distance learning</h1>
-                    <p>web, mobile, product</p>
+                    <h2>uLesson</h2> <!-- Nombre del proyecto -->
+                    <h1>Online platform for distance learning</h1> <!-- Descripción corta del proyecto -->
+                    <p>web, mobile, product</p> <!-- Categorías del proyecto -->
                 </div>
             </div>
 
+            <!-- Tercer proyecto -->
             <div class="project">
                 <div class="text">
-                    <h2>Genesis Vision</h2>
-                    <h1>Private trust management and trading platform</h1>
-                    <p>branding, design, experience, product</p>
+                    <h2>Genesis Vision</h2> <!-- Nombre del proyecto -->
+                    <h1>Private trust management and trading platform</h1> <!-- Descripción corta del proyecto -->
+                    <p>branding, design, experience, product</p> <!-- Categorías del proyecto -->
                 </div>
                 <div class="image">
-                    <img src="IMG/section-3-m.png" alt="Genesis Vision">
+                    <img src="IMG/section-3-m.png" alt="Genesis Vision"> <!-- Imagen del proyecto -->
                 </div>
             </div>
+
         </section>
     </main>
 
+    <!-- Pie de página -->
     <footer>
-        <h3>Have an idea? Tell us about it</h3>
+        <h3>Have an idea? Tell us about it</h3> <!-- Mensaje motivador -->
+
+        <!-- Contenedor de enlaces del footer -->
         <div class="footer-links">
+
+            <!-- Primera columna del footer -->
             <div class="column">
-                <h4>Product</h4>
-                <ul>
-                    <li>Feature</li>
-                    <li>Security</li>
-                    <li>Enterprise</li>
-                    <li>Customer stories</li>
-                </ul>
-            </div>
-            <div class="column">
-                <h4>Platform</h4>
-                <ul>
-                    <li>Developer API</li>
-                    <li>Partners</li>
-                    <li>Atom</li>
-                    <li>Electron</li>
-                </ul>
-            </div>
-            <div class="column">
-                <h4>Support</h4>
-                <ul>
-                    <li>Help</li>
-                    <li>Community Forum</li>
-                    <li>Learning Lab</li>
-                    <li>Customer stories</li>
-                </ul>
-            </div>
-            <div class="column">
-                <h4>Company</h4>
-                <ul>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Careers</li>
-                    <li>Press</li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+                <h4>Product</h4> <!-- Categoría de enlaces -->
+                <!-- Lista de enlaces de la primera columna -->
+<ul>
+    <li>Feature</li> <!-- Características del producto -->
+    <li>Security</li> <!-- Seguridad del producto -->
+    <li>Enterprise</li> <!-- Opciones para empresas -->
+    <li>Customer stories</li> <!-- Historias de clientes satisfechos -->
+</ul>
+</div>
+
+<!-- Segunda columna del footer con enlaces relacionados a la plataforma -->
+<div class="column">
+    <h4>Platform</h4> <!-- Título de la sección -->
+    <ul>
+        <li>Developer API</li> <!-- API para desarrolladores -->
+        <li>Partners</li> <!-- Información sobre socios o colaboradores -->
+        <li>Atom</li> <!-- Editor de código Atom -->
+        <li>Electron</li> <!-- Framework Electron para aplicaciones de escritorio -->
+    </ul>
+</div>
+
+<!-- Tercera columna con enlaces de soporte -->
+<div class="column">
+    <h4>Support</h4> <!-- Título de la sección -->
+    <ul>
+        <li>Help</li> <!-- Sección de ayuda -->
+        <li>Community Forum</li> <!-- Foro de la comunidad -->
+        <li>Learning Lab</li> <!-- Recursos de aprendizaje -->
+        <li>Customer stories</li> <!-- Testimonios de clientes -->
+    </ul>
+</div>
+
+<!-- Cuarta columna con información sobre la empresa -->
+<div class="column">
+    <h4>Company</h4> <!-- Título de la sección -->
+    <ul>
+        <li>About</li> <!-- Información sobre la empresa -->
+        <li>Blog</li> <!-- Blog oficial -->
+        <li>Careers</li> <!-- Oportunidades laborales -->
+        <li>Press</li> <!-- Información de prensa -->
+    </ul>
+</div>
+</div>
+
+</footer>
 </body>
 </html>
+
 
